[package]
name = "txts-rs"
description = "Rust library for interacting with txts"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "brotli"] }
scraper = "0.17"
thiserror = "1.0"
url = "2.4"
uuid = "1.4"
regex = "1.9"
markup5ever = "0.11"

[dev-dependencies]
tokio = { version = "1.32", features = ["rt", "macros"] }